<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".IntroductionActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">

           <TextView
               android:id="@+id/greetings"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="8dp"
               android:text="Hello Username"
               android:textAppearance="@style/TextAppearance.AppCompat.Medium"
               android:textSize="36sp" />

           <TextView
               android:id="@+id/instructions"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="16dp"
               android:text="@string/instructions"
               android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_margin="10dp">
               <!--first question-->
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                   android:text="@string/question_one"/>
               <RadioGroup
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">
                   <RadioButton
                       android:id="@+id/option_one_a"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_one_a"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_one_b"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_one_b"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_one_c"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_one_c"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_one_d"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_one_d"
                       android:onClick="onCheckAnswer"/>
               </RadioGroup>
               <!--second question-->
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                   android:text="@string/question_two"/>
               <RadioGroup
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">
                   <RadioButton
                       android:id="@+id/option_two_a"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_two_a"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_two_b"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_two_b"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_two_c"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_two_c"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_two_d"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_two_d"
                       android:onClick="onCheckAnswer"/>
               </RadioGroup>
               <!--third question-->
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                   android:text="@string/question_three"/>
               <RadioGroup
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">
                   <RadioButton
                       android:id="@+id/option_three_a"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_three_a"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_three_b"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_three_b"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_three_c"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_three_c"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_three_d"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_three_d"
                       android:onClick="onCheckAnswer"/>
               </RadioGroup>
               <!--fourth question-->
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                   android:text="@string/question_four"/>
               <RadioGroup
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">
                   <RadioButton
                       android:id="@+id/option_four_a"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_four_a"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_four_b"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_four_b"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_four_c"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_four_c"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_four_d"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_four_d"
                       android:onClick="onCheckAnswer"/>
               </RadioGroup>
               <!--fifth question-->
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                   android:text="@string/question_five"/>
               <RadioGroup
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">
                   <RadioButton
                       android:id="@+id/option_five_a"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_five_a"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_five_b"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_five_b"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_five_c"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_five_c"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_five_d"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_five_d"
                       android:onClick="onCheckAnswer"/>
               </RadioGroup>
               <!--sixth question-->
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                   android:text="@string/question_six"/>
               <RadioGroup
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">
                   <RadioButton
                       android:id="@+id/option_six_a"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_six_a"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_six_b"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_six_b"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_six_c"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_six_c"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_six_d"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_six_d"
                       android:onClick="onCheckAnswer"/>
               </RadioGroup>
               <!--seventh question-->
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                   android:text="@string/question_seven"/>
               <RadioGroup
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">
                   <RadioButton
                       android:id="@+id/option_seven_a"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_seven_a"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_seven_b"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_seven_b"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_seven_c"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_seven_c"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_seven_d"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_seven_d"
                       android:onClick="onCheckAnswer"/>
               </RadioGroup>
               <!--eight question-->
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                   android:text="@string/question_eight"/>
               <RadioGroup
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">
                   <RadioButton
                       android:id="@+id/option_eight_a"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_eight_a"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_eight_b"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_eight_b"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_eight_c"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_eight_c"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_eight_d"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_eight_d"
                       android:onClick="onCheckAnswer"/>
               </RadioGroup>
               <!--ninth question-->
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                   android:text="@string/question_nine"/>
               <RadioGroup
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">
                   <RadioButton
                       android:id="@+id/option_nine_a"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_nine_a"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_nine_b"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_nine_b"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_nine_c"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_nine_c"
                       android:onClick="onCheckAnswer"/>
                   <RadioButton
                       android:id="@+id/option_nine_d"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/option_nine_d"
                       android:onClick="onCheckAnswer"/>
               </RadioGroup>
               <!--tenth question-->
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                   android:text="@string/question_ten"/>
               <RadioGroup
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">
                   <RadioButton
                       android:id="@+id/option_ten_a"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:onClick="onCheckAnswer"
                       android:text="@string/option_ten_a"/>
                   <RadioButton
                       android:id="@+id/option_ten_b"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:onClick="onCheckAnswer"
                       android:text="@string/option_ten_b"/>
                   <RadioButton
                       android:id="@+id/option_ten_c"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:onClick="onCheckAnswer"
                       android:text="@string/option_ten_c"/>
                   <RadioButton
                       android:id="@+id/option_ten_d"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:onClick="onCheckAnswer"
                       android:text="@string/option_ten_d"/>
               </RadioGroup>
               <!--submit button-->
               <Button
                   android:id="@+id/submit_button"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/submit"
                   android:onClick="submit"/>
           </LinearLayout>
       </LinearLayout>
</ScrollView>

